rust/macros/tests/invalid/target/debug/deps/single_argument-e25eb030cd13212a.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument-e25eb030cd13212a.d: single_argument.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libsingle_argument-e25eb030cd13212a.rmeta: single_argument.rs Cargo.toml

single_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
